2017-08-03  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/watcom/Makefile:  Avoid expanding macros when extending the
	list of objects to build.

	* config/ming/Makefile:  Strip decorations when creating a 32bit
	library by using the -k option of dlltool. Revert the incoreect
	redirection change from 2017-07-27.
	Bug #1942

2017-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Separate code path for calculating image grid
	coordinates for logscale axes is now redundant.

2017-07-31  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.ac src/axis.c src/axis.h src/color.c src/command.c
	src/mouse.c src/plot2d.c src/plot3d.c src/pm3d.c src/pm3d.h src/save.c
	src/set.c src/stats.c src/tabulate.c src/unset.c src/util3d.c:

	Version 5.2 introduced support for non-linear axes and used it to
	reimplement logscale.  The new implementation was enabled by default but
	could be disabled by ./configure --without-nonlinear-axes
	Now we remove the option to disable it and remove the original version 
	of macros AXIS_DO_LOG() etc belonging to the old implementation.
	The macros remain as no-ops but will be removed in later patches.

	* src/axis.c src/axis.h src/contour.c src/datafile.c src/eval.c
	src/graph3d.c src/graphics.c src/interpol.c src/mouse.c src/plot2d.c
	src/plot3d.c:  Remove all instances of AXIS_LOG_VALUE AXIS_DELOG_VALUE

	* src/axis.c src/axis.h src/interpol.c src/mouse.c src/set.c:
	Remove all instances of AXIS_DO_LOG and AXIS_UNDO_LOG

	* src/axis.c src/axis.h src/gadgets.c src/graphics.c src/interpol.c
	src/plot2d.c:  Remove all instances of axis_log_value axis_de_log_value
	axis_do_log axis_undo_log

	* src/axis.h: Always optimize evaluation of logscale coordinates

	* src/axis.c: Remove code only used by old logscale implementation

	* src/axis.c src/axis.h src/datafile.c src/plot2d.c:
	Replace old routine axis_unlog_interval() with a simpler check
	check_log_limits() to ensure min/max of a logscaled axis are positive
