@@ -1,3 +1,8 @@
+2017-08-03  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.h:
+	Simplify the logic of macro ACTUAL_STORE_WITH_LOG_AND_UPDATE_RANGE
+
 2017-08-03  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* config/watcom/Makefile:  Avoid expanding macros when extending the
